@@ -1,3 +1,12 @@
+2021-09-08  Manuel Rego Casasnovas  <rego@igalia.com>
+
+        [css-text-decor] text-decoration-* properties are no longer experimental
+        https://bugs.webkit.org/show_bug.cgi?id=230039
+
+        Reviewed by Simon Fraser.
+
+        * css/CSSProperties.json: Remove experimental status from text-decoration-* properties.
+
 2021-09-08  Antti Koivisto  <antti@apple.com>
 
         [LFC][Integration] Hovering over link switches to legacy inline boxes
